Use jdk17 as min required
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>